--- a/battle.html
+++ b/battle.html
@@ -49,11 +49,85 @@
                 <a href="battle.html" class="delete2 btn btn-primary "> -back- </a>
                     <h1>Lobby</h1>
                     <div class="row">
-                        <div class="col content_epic_common">Nick-me:<span>{name}</span>; Level:<span>{level}</span>;result:<span>{battle-result}</span>;
+                        <div class="col content_epic_common">Game<span>{name}</span>; People:<span>{people}</span>;connection:<span>{connection}</span>;
+
                         </div>
-                        <div class="content_epic_common2"><a href="" class="btn btn-danger swing">PLAY!</a>
+                        <div class="content_epic_common2">
+                          <a href="" class="btn btn-danger swing">PLAY!</a>
                     </div>
+                  </div>
+                  <div class="row">
+                      <div class="col content_epic_common">Game<span>{name}</span>; People:<span>{people}</span>;connection:<span>{connection}</span>;
+
+                      </div>
+                      <div class="content_epic_common2">
+                        <a href="" class="btn btn-danger swing">PLAY!</a>
+                  </div>
                 </div>
+                <div class="row">
+                    <div class="col content_epic_common">Game<span>{name}</span>; People:<span>{people}</span>;connection:<span>{connection}</span>;
+
+                    </div>
+                    <div class="content_epic_common2">
+                      <a href="" class="btn btn-danger swing">PLAY!</a>
+                </div>
+              </div>
+              <div class="row">
+                  <div class="col content_epic_common">Game<span>{name}</span>; People:<span>{people}</span>;connection:<span>{connection}</span>;
+
+                  </div>
+                  <div class="content_epic_common2">
+                    <a href="" class="btn btn-danger swing">PLAY!</a>
+              </div>
+            </div>
+            <div class="row">
+                <div class="col content_epic_common">Game<span>{name}</span>; People:<span>{people}</span>;connection:<span>{connection}</span>;
+
+                </div>
+                <div class="content_epic_common2">
+                  <a href="" class="btn btn-danger swing">PLAY!</a>
+            </div>
+          </div>
+          <div class="row">
+              <div class="col content_epic_common">Game<span>{name}</span>; People:<span>{people}</span>;connection:<span>{connection}</span>;
+
+              </div>
+              <div class="content_epic_common2">
+                <a href="" class="btn btn-danger swing">PLAY!</a>
+          </div>
+        </div>
+        <div class="row">
+            <div class="col content_epic_common">Game<span>{name}</span>; People:<span>{people}</span>;connection:<span>{connection}</span>;
+
+            </div>
+            <div class="content_epic_common2">
+              <a href="" class="btn btn-danger swing">PLAY!</a>
+        </div>
+      </div>
+      <div class="row">
+          <div class="col content_epic_common">Game<span>{name}</span>; People:<span>{people}</span>;connection:<span>{connection}</span>;
+
+          </div>
+          <div class="content_epic_common2">
+            <a href="" class="btn btn-danger swing">PLAY!</a>
+      </div>
+    </div>
+    <div class="row">
+        <div class="col content_epic_common">Game<span>{name}</span>; People:<span>{people}</span>;connection:<span>{connection}</span>;
+
+        </div>
+        <div class="content_epic_common2">
+          <a href="" class="btn btn-danger swing">PLAY!</a>
+    </div>
+  </div>
+  <div class="row">
+      <div class="col content_epic_common">Game<span>{name}</span>; People:<span>{people}</span>;connection:<span>{connection}</span>;
+
+      </div>
+      <div class="content_epic_common2">
+        <a href="" class="btn btn-danger swing">PLAY!</a>
+  </div>
+</div>
             </div>
 
         </div>
@@ -63,13 +137,85 @@
                 <a href="battle.html" class="delete2 btn btn-primary " > -back- </a>
                     <h1>Lobby</h1>
                     <div class="row">
-                        <div class="col content_epic_common">Nick-me:<span>{name}</span>; Level:<span>{level}</span>;result:<span>{battle-result}</span>;
+                        <div class="col content_epic_common">Game<span>{name}</span>; People:<span>{people}</span>;connection:<span>{connection}</span>;
 
                         </div>
                         <div class="content_epic_common2">
                           <a href="" class="btn btn-danger swing">PLAY!</a>
                     </div>
+                  </div>
+                  <div class="row">
+                      <div class="col content_epic_common">Game<span>{name}</span>; People:<span>{people}</span>;connection:<span>{connection}</span>;
+
+                      </div>
+                      <div class="content_epic_common2">
+                        <a href="" class="btn btn-danger swing">PLAY!</a>
+                  </div>
                 </div>
+                <div class="row">
+                    <div class="col content_epic_common">Game<span>{name}</span>; People:<span>{people}</span>;connection:<span>{connection}</span>;
+
+                    </div>
+                    <div class="content_epic_common2">
+                      <a href="" class="btn btn-danger swing">PLAY!</a>
+                </div>
+              </div>
+              <div class="row">
+                  <div class="col content_epic_common">Game<span>{name}</span>; People:<span>{people}</span>;connection:<span>{connection}</span>;
+
+                  </div>
+                  <div class="content_epic_common2">
+                    <a href="" class="btn btn-danger swing">PLAY!</a>
+              </div>
+            </div>
+            <div class="row">
+                <div class="col content_epic_common">Game<span>{name}</span>; People:<span>{people}</span>;connection:<span>{connection}</span>;
+
+                </div>
+                <div class="content_epic_common2">
+                  <a href="" class="btn btn-danger swing">PLAY!</a>
+            </div>
+          </div>
+          <div class="row">
+              <div class="col content_epic_common">Game<span>{name}</span>; People:<span>{people}</span>;connection:<span>{connection}</span>;
+
+              </div>
+              <div class="content_epic_common2">
+                <a href="" class="btn btn-danger swing">PLAY!</a>
+          </div>
+        </div>
+        <div class="row">
+            <div class="col content_epic_common">Game<span>{name}</span>; People:<span>{people}</span>;connection:<span>{connection}</span>;
+
+            </div>
+            <div class="content_epic_common2">
+              <a href="" class="btn btn-danger swing">PLAY!</a>
+        </div>
+      </div>
+      <div class="row">
+          <div class="col content_epic_common">Game<span>{name}</span>; People:<span>{people}</span>;connection:<span>{connection}</span>;
+
+          </div>
+          <div class="content_epic_common2">
+            <a href="" class="btn btn-danger swing">PLAY!</a>
+      </div>
+    </div>
+    <div class="row">
+        <div class="col content_epic_common">Game<span>{name}</span>; People:<span>{people}</span>;connection:<span>{connection}</span>;
+
+        </div>
+        <div class="content_epic_common2">
+          <a href="" class="btn btn-danger swing">PLAY!</a>
+    </div>
+  </div>
+  <div class="row">
+      <div class="col content_epic_common">Game<span>{name}</span>; People:<span>{people}</span>;connection:<span>{connection}</span>;
+
+      </div>
+      <div class="content_epic_common2">
+        <a href="" class="btn btn-danger swing">PLAY!</a>
+  </div>
+</div>
                 </div>
             </div>
 
@@ -78,13 +224,101 @@
                 <a href="battle.html" class="delete2 btn btn-primary " > -back- </a>
                     <h1>Lobby</h1>
                     <div class="row">
-                        <div class="col content_epic_common">Nick-me:<span>{name}</span>; Level:<span>{level}</span>;result:<span>{battle-result}</span>;
+                        <div class="col content_epic_common">Game<span>{name}</span>; People:<span>{people}</span>;connection:<span>{connection}</span>;
 
                         </div>
                         <div class="content_epic_common2">
                           <a href="" class="btn btn-danger swing">PLAY!</a>
                     </div>
+                  </div>
+                  <div class="row">
+                      <div class="col content_epic_common">Game<span>{name}</span>; People:<span>{people}</span>;connection:<span>{connection}</span>;
+
+                      </div>
+                      <div class="content_epic_common2">
+                        <a href="" class="btn btn-danger swing">PLAY!</a>
+                  </div>
                 </div>
+                <div class="row">
+                    <div class="col content_epic_common">Game<span>{name}</span>; People:<span>{people}</span>;connection:<span>{connection}</span>;
+
+                    </div>
+                    <div class="content_epic_common2">
+                      <a href="" class="btn btn-danger swing">PLAY!</a>
+                </div>
+              </div>
+              <div class="row">
+                  <div class="col content_epic_common">Game<span>{name}</span>; People:<span>{people}</span>;connection:<span>{connection}</span>;
+
+                  </div>
+                  <div class="content_epic_common2">
+                    <a href="" class="btn btn-danger swing">PLAY!</a>
+              </div>
+            </div>
+            <div class="row">
+                <div class="col content_epic_common">Game<span>{name}</span>; People:<span>{people}</span>;connection:<span>{connection}</span>;
+
+                </div>
+                <div class="content_epic_common2">
+                  <a href="" class="btn btn-danger swing">PLAY!</a>
+            </div>
+          </div>
+          <div class="row">
+              <div class="col content_epic_common">Game<span>{name}</span>; People:<span>{people}</span>;connection:<span>{connection}</span>;
+
+              </div>
+              <div class="content_epic_common2">
+                <a href="" class="btn btn-danger swing">PLAY!</a>
+          </div>
+        </div>
+        <div class="row">
+            <div class="col content_epic_common">Game<span>{name}</span>; People:<span>{people}</span>;connection:<span>{connection}</span>;
+
+            </div>
+            <div class="content_epic_common2">
+              <a href="" class="btn btn-danger swing">PLAY!</a>
+        </div>
+      </div>
+      <div class="row">
+          <div class="col content_epic_common">Game<span>{name}</span>; People:<span>{people}</span>;connection:<span>{connection}</span>;
+
+          </div>
+          <div class="content_epic_common2">
+            <a href="" class="btn btn-danger swing">PLAY!</a>
+      </div>
+    </div>
+    <div class="row">
+        <div class="col content_epic_common">Game<span>{name}</span>; People:<span>{people}</span>;connection:<span>{connection}</span>;
+
+        </div>
+        <div class="content_epic_common2">
+          <a href="" class="btn btn-danger swing">PLAY!</a>
+    </div>
+  </div>
+  <div class="row">
+      <div class="col content_epic_common">Game<span>{name}</span>; People:<span>{people}</span>;connection:<span>{connection}</span>;
+
+      </div>
+      <div class="content_epic_common2">
+        <a href="" class="btn btn-danger swing">PLAY!</a>
+  </div>
+</div>
+<div class="row">
+    <div class="col content_epic_common">Game<span>{name}</span>; People:<span>{people}</span>;connection:<span>{connection}</span>;
+
+    </div>
+    <div class="content_epic_common2">
+      <a href="" class="btn btn-danger swing">PLAY!</a>
+</div>
+</div>
+<div class="row">
+    <div class="col content_epic_common">Game<span>{name}</span>; People:<span>{people}</span>;connection:<span>{connection}</span>;
+
+    </div>
+    <div class="content_epic_common2">
+      <a href="" class="btn btn-danger swing">PLAY!</a>
+</div>
+</div>
                 </div>
             </div>
 
@@ -93,13 +327,85 @@
                 <a href="battle.html" class="delete2 btn btn-primary " > -back- </a>
                     <h1>Lobby</h1>
                     <div class="row">
-                        <div class="col content_epic_common">Nick-me:<span>{name}</span>; Level:<span>{level}</span>;result:<span>{battle-result}</span>;
+                        <div class="col content_epic_common">Game<span>{name}</span>; People:<span>{people}</span>;connection:<span>{connection}</span>;
 
                         </div>
                         <div class="content_epic_common2">
                           <a href="" class="btn btn-danger swing">PLAY!</a>
                     </div>
                   </div>
+                  <div class="row">
+                      <div class="col content_epic_common">Game<span>{name}</span>; People:<span>{people}</span>;connection:<span>{connection}</span>;
+
+                      </div>
+                      <div class="content_epic_common2">
+                        <a href="" class="btn btn-danger swing">PLAY!</a>
+                  </div>
+                </div>
+                <div class="row">
+                    <div class="col content_epic_common">Game<span>{name}</span>; People:<span>{people}</span>;connection:<span>{connection}</span>;
+
+                    </div>
+                    <div class="content_epic_common2">
+                      <a href="" class="btn btn-danger swing">PLAY!</a>
+                </div>
+              </div>
+              <div class="row">
+                  <div class="col content_epic_common">Game<span>{name}</span>; People:<span>{people}</span>;connection:<span>{connection}</span>;
+
+                  </div>
+                  <div class="content_epic_common2">
+                    <a href="" class="btn btn-danger swing">PLAY!</a>
+              </div>
+            </div>
+            <div class="row">
+                <div class="col content_epic_common">Game<span>{name}</span>; People:<span>{people}</span>;connection:<span>{connection}</span>;
+
+                </div>
+                <div class="content_epic_common2">
+                  <a href="" class="btn btn-danger swing">PLAY!</a>
+            </div>
+          </div>
+          <div class="row">
+              <div class="col content_epic_common">Game<span>{name}</span>; People:<span>{people}</span>;connection:<span>{connection}</span>;
+
+              </div>
+              <div class="content_epic_common2">
+                <a href="" class="btn btn-danger swing">PLAY!</a>
+          </div>
+        </div>
+        <div class="row">
+            <div class="col content_epic_common">Game<span>{name}</span>; People:<span>{people}</span>;connection:<span>{connection}</span>;
+
+            </div>
+            <div class="content_epic_common2">
+              <a href="" class="btn btn-danger swing">PLAY!</a>
+        </div>
+      </div>
+      <div class="row">
+          <div class="col content_epic_common">Game<span>{name}</span>; People:<span>{people}</span>;connection:<span>{connection}</span>;
+
+          </div>
+          <div class="content_epic_common2">
+            <a href="" class="btn btn-danger swing">PLAY!</a>
+      </div>
+    </div>
+    <div class="row">
+        <div class="col content_epic_common">Game<span>{name}</span>; People:<span>{people}</span>;connection:<span>{connection}</span>;
+
+        </div>
+        <div class="content_epic_common2">
+          <a href="" class="btn btn-danger swing">PLAY!</a>
+    </div>
+  </div>
+  <div class="row">
+      <div class="col content_epic_common">Game<span>{name}</span>; People:<span>{people}</span>;connection:<span>{connection}</span>;
+
+      </div>
+      <div class="content_epic_common2">
+        <a href="" class="btn btn-danger swing">PLAY!</a>
+  </div>
+</div>
                 </div>
                 </div>
     </div>
