--- a/battle.html
+++ b/battle.html
@@ -18,7 +18,7 @@
         <div class="main">
             <nav>
               <a href="index.html">News</a>|
-              <a href="battle.html">Battlse</a>|
+              <a href="battle.html">Battles</a>|
               <a href="rating.html">Rating</a>
             </nav>
     </div>
@@ -406,8 +406,13 @@
         <a href="" class="btn btn-danger swing">PLAY!</a>
   </div>
 </div>
+
                 </div>
+
                 </div>
+                <div id="footer">
+            <p>&copy; 2018 powered by Ilya Gayvoronsky for olympiad</p>
+        </div>
     </div>
     </div>
 </body>
