--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="main">
             <nav>
               <a href="index.html">News</a>|
-              <a href="battle.html">Battlse</a>|
+              <a href="battle.html">Battles</a>|
               <a href="rating.html">Rating</a>
             </nav>
     </div>
@@ -27,6 +27,41 @@
             <div id="news_header">
                 <h2>News</h2>
             </div>
+              <div class="news_content">
+                <h1>News10</h1>
+                  qwertyuidsnfuivniudsfnviunsfdiuviudfn
+                  sdviuiufnivusdnifnvifdnivunsdfiuvniufdnv
+                  oivdnsfivnifudnviundsfiunviusdfniuvnifunvdifnv
+                  oivdsvnfindvniudsvbduyfviudfvdfivdfi
+                </div>
+                <div class="news_content">
+                  <h1>News9</h1>
+                    qwertyuidsnfuivniudsfnviunsfdiuviudfn
+                    sdviuiufnivusdnifnvifdnivunsdfiuvniufdnv
+                    oivdnsfivnifudnviundsfiunviusdfniuvnifunvdifnv
+                    oivdsvnfindvniudsvbduyfviudfvdfivdfi
+                  </div>
+                  <div class="news_content">
+              <h1>News8</h1>
+                qwertyuidsnfuivniudsfnviunsfdiuviudfn
+                sdviuiufnivusdnifnvifdnivunsdfiuvniufdnv
+                oivdnsfivnifudnviundsfiunviusdfniuvnifunvdifnv
+                oivdsvnfindvniudsvbduyfviudfvdfivdfi
+              </div>
+              <div class="news_content">
+                <h1>News7</h1>
+                  qwertyuidsnfuivniudsfnviunsfdiuviudfn
+                  sdviuiufnivusdnifnvifdnivunsdfiuvniufdnv
+                  oivdnsfivnifudnviundsfiunviusdfniuvnifunvdifnv
+                  oivdsvnfindvniudsvbduyfviudfvdfivdfi
+                </div>
+                <div class="news_content">
+                  <h1>News6</h1>
+                    qwertyuidsnfuivniudsfnviunsfdiuviudfn
+                    sdviuiufnivusdnifnvifdnivunsdfiuvniufdnv
+                    oivdnsfivnifudnviundsfiunviusdfniuvnifunvdifnv
+                    oivdsvnfindvniudsvbduyfviudfvdfivdfi
+                  </div>
               <div class="news_content">
                 <h1>News5</h1>
                   qwertyuidsnfuivniudsfnviunsfdiuviudfn
