--- a/rating.html
+++ b/rating.html
@@ -18,7 +18,7 @@
         <div class="main">
             <nav>
               <a href="index.html">News</a>|
-              <a href="battle.html">Battlse</a>|
+              <a href="battle.html">Battles</a>|
               <a href="rating.html">Rating</a>
             </nav>
     </div>
@@ -99,6 +99,10 @@
         <td>non-active</td>
     </tr>
 </table>
+<div id="footer">
+<p>&copy; 2018 powered by Ilya Gayvoronsky for olympiad</p>
+</div>
+
 </div>
 </body>
 </html>
