--- a/battle.html
+++ b/battle.html
@@ -26,390 +26,12 @@
         <div id="news_header">
             <h2>History battles</h2>
         </div >
-        <div id="epic_header">
-            <h2>Epic battles</h2>
-        </div >
-        <div id="common_header">
-            <h2>Common battles</h2>
-        </div >
-        <div id="group_header">
-            <h2>Group battles</h2>
-        </div >
-        <div id="survial_header">
-            <h2>Survial</h2>
-        </div >
         <div class="news_header">
-            <a  href="#" id="slider" class="buttons btn btn-primary " onclick="hideshow();" style="background-color: darkgray;border: solid 1px  darkgrey">common games</a>
-            <a href="#" id="slider2" class="buttons btn btn-primary " onclick="hideshow2();" style="background-color: rebeccapurple;border: solid 1px  rebeccapurple;color:white;">Epic games</a>
-            <a href="#" id="slider3" class="buttons btn btn-primary " onclick="hideshow3();" style="background-color: blue;border: solid 1px  rebeccapurple;color:white;">Group games</a>
-            <a href="#" id="slider4" class="buttons btn btn-primary " onclick="hideshow4();" style="background-color:darkgreen;border: solid 1px  rebeccapurple;color:yellow;">Survial games</a>
+            <a  href="common.html" id="slider" class="buttons btn btn-primary " onclick="hideshow();" style="background-color: darkgray;border: solid 1px  darkgrey">common games</a>
+            <a href="epic.html" id="slider2" class="buttons btn btn-primary " onclick="hideshow2();" style="background-color: rebeccapurple;border: solid 1px  rebeccapurple;color:white;">Epic games</a>
+            <a href="group.html" id="slider3" class="buttons btn btn-primary " onclick="hideshow3();" style="background-color: blue;border: solid 1px  rebeccapurple;color:white;">Group games</a>
+            <a href="survial.html" class="buttons btn btn-primary " style="background-color:darkgreen;border: solid 1px  rebeccapurple;color:yellow;">Survial games</a>
         </div>
-        <div id="other2"  style="display:none">
-            <div class="battle_content">
-                <a href="battle.html" class="delete2 btn btn-primary "> -back- </a>
-                    <h1>Lobby</h1>
-                    <div class="row">
-                        <div class="col content_epic_common">Game<span>{name}</span>; People:<span>{people}</span>;connection:<span>{connection}</span>;
-
-                        </div>
-                        <div class="content_epic_common2">
-                          <a href="" class="btn btn-danger swing">PLAY!</a>
-                    </div>
-                  </div>
-                  <div class="row">
-                      <div class="col content_epic_common">Game<span>{name}</span>; People:<span>{people}</span>;connection:<span>{connection}</span>;
-
-                      </div>
-                      <div class="content_epic_common2">
-                        <a href="" class="btn btn-danger swing">PLAY!</a>
-                  </div>
-                </div>
-                <div class="row">
-                    <div class="col content_epic_common">Game<span>{name}</span>; People:<span>{people}</span>;connection:<span>{connection}</span>;
-
-                    </div>
-                    <div class="content_epic_common2">
-                      <a href="" class="btn btn-danger swing">PLAY!</a>
-                </div>
-              </div>
-              <div class="row">
-                  <div class="col content_epic_common">Game<span>{name}</span>; People:<span>{people}</span>;connection:<span>{connection}</span>;
-
-                  </div>
-                  <div class="content_epic_common2">
-                    <a href="" class="btn btn-danger swing">PLAY!</a>
-              </div>
-            </div>
-            <div class="row">
-                <div class="col content_epic_common">Game<span>{name}</span>; People:<span>{people}</span>;connection:<span>{connection}</span>;
-
-                </div>
-                <div class="content_epic_common2">
-                  <a href="" class="btn btn-danger swing">PLAY!</a>
-            </div>
-          </div>
-          <div class="row">
-              <div class="col content_epic_common">Game<span>{name}</span>; People:<span>{people}</span>;connection:<span>{connection}</span>;
-
-              </div>
-              <div class="content_epic_common2">
-                <a href="" class="btn btn-danger swing">PLAY!</a>
-          </div>
-        </div>
-        <div class="row">
-            <div class="col content_epic_common">Game<span>{name}</span>; People:<span>{people}</span>;connection:<span>{connection}</span>;
-
-            </div>
-            <div class="content_epic_common2">
-              <a href="" class="btn btn-danger swing">PLAY!</a>
-        </div>
-      </div>
-      <div class="row">
-          <div class="col content_epic_common">Game<span>{name}</span>; People:<span>{people}</span>;connection:<span>{connection}</span>;
-
-          </div>
-          <div class="content_epic_common2">
-            <a href="" class="btn btn-danger swing">PLAY!</a>
-      </div>
-    </div>
-    <div class="row">
-        <div class="col content_epic_common">Game<span>{name}</span>; People:<span>{people}</span>;connection:<span>{connection}</span>;
-
-        </div>
-        <div class="content_epic_common2">
-          <a href="" class="btn btn-danger swing">PLAY!</a>
-    </div>
-  </div>
-  <div class="row">
-      <div class="col content_epic_common">Game<span>{name}</span>; People:<span>{people}</span>;connection:<span>{connection}</span>;
-
-      </div>
-      <div class="content_epic_common2">
-        <a href="" class="btn btn-danger swing">PLAY!</a>
-  </div>
-</div>
-            </div>
-
-        </div>
-
-        <div id="other"  style="display:none">
-            <div class="battle_content">
-                <a href="battle.html" class="delete2 btn btn-primary " > -back- </a>
-                    <h1>Lobby</h1>
-                    <div class="row">
-                        <div class="col content_epic_common">Game<span>{name}</span>; People:<span>{people}</span>;connection:<span>{connection}</span>;
-
-                        </div>
-                        <div class="content_epic_common2">
-                          <a href="" class="btn btn-danger swing">PLAY!</a>
-                    </div>
-                  </div>
-                  <div class="row">
-                      <div class="col content_epic_common">Game<span>{name}</span>; People:<span>{people}</span>;connection:<span>{connection}</span>;
-
-                      </div>
-                      <div class="content_epic_common2">
-                        <a href="" class="btn btn-danger swing">PLAY!</a>
-                  </div>
-                </div>
-                <div class="row">
-                    <div class="col content_epic_common">Game<span>{name}</span>; People:<span>{people}</span>;connection:<span>{connection}</span>;
-
-                    </div>
-                    <div class="content_epic_common2">
-                      <a href="" class="btn btn-danger swing">PLAY!</a>
-                </div>
-              </div>
-              <div class="row">
-                  <div class="col content_epic_common">Game<span>{name}</span>; People:<span>{people}</span>;connection:<span>{connection}</span>;
-
-                  </div>
-                  <div class="content_epic_common2">
-                    <a href="" class="btn btn-danger swing">PLAY!</a>
-              </div>
-            </div>
-            <div class="row">
-                <div class="col content_epic_common">Game<span>{name}</span>; People:<span>{people}</span>;connection:<span>{connection}</span>;
-
-                </div>
-                <div class="content_epic_common2">
-                  <a href="" class="btn btn-danger swing">PLAY!</a>
-            </div>
-          </div>
-          <div class="row">
-              <div class="col content_epic_common">Game<span>{name}</span>; People:<span>{people}</span>;connection:<span>{connection}</span>;
-
-              </div>
-              <div class="content_epic_common2">
-                <a href="" class="btn btn-danger swing">PLAY!</a>
-          </div>
-        </div>
-        <div class="row">
-            <div class="col content_epic_common">Game<span>{name}</span>; People:<span>{people}</span>;connection:<span>{connection}</span>;
-
-            </div>
-            <div class="content_epic_common2">
-              <a href="" class="btn btn-danger swing">PLAY!</a>
-        </div>
-      </div>
-      <div class="row">
-          <div class="col content_epic_common">Game<span>{name}</span>; People:<span>{people}</span>;connection:<span>{connection}</span>;
-
-          </div>
-          <div class="content_epic_common2">
-            <a href="" class="btn btn-danger swing">PLAY!</a>
-      </div>
-    </div>
-    <div class="row">
-        <div class="col content_epic_common">Game<span>{name}</span>; People:<span>{people}</span>;connection:<span>{connection}</span>;
-
-        </div>
-        <div class="content_epic_common2">
-          <a href="" class="btn btn-danger swing">PLAY!</a>
-    </div>
-  </div>
-  <div class="row">
-      <div class="col content_epic_common">Game<span>{name}</span>; People:<span>{people}</span>;connection:<span>{connection}</span>;
-
-      </div>
-      <div class="content_epic_common2">
-        <a href="" class="btn btn-danger swing">PLAY!</a>
-  </div>
-</div>
-                </div>
-            </div>
-
-        <div id="other3"  style="display:none">
-            <div class="battle_content">
-                <a href="battle.html" class="delete2 btn btn-primary " > -back- </a>
-                    <h1>Lobby</h1>
-                    <div class="row">
-                        <div class="col content_epic_common">Game<span>{name}</span>; People:<span>{people}</span>;connection:<span>{connection}</span>;
-
-                        </div>
-                        <div class="content_epic_common2">
-                          <a href="" class="btn btn-danger swing">PLAY!</a>
-                    </div>
-                  </div>
-                  <div class="row">
-                      <div class="col content_epic_common">Game<span>{name}</span>; People:<span>{people}</span>;connection:<span>{connection}</span>;
-
-                      </div>
-                      <div class="content_epic_common2">
-                        <a href="" class="btn btn-danger swing">PLAY!</a>
-                  </div>
-                </div>
-                <div class="row">
-                    <div class="col content_epic_common">Game<span>{name}</span>; People:<span>{people}</span>;connection:<span>{connection}</span>;
-
-                    </div>
-                    <div class="content_epic_common2">
-                      <a href="" class="btn btn-danger swing">PLAY!</a>
-                </div>
-              </div>
-              <div class="row">
-                  <div class="col content_epic_common">Game<span>{name}</span>; People:<span>{people}</span>;connection:<span>{connection}</span>;
-
-                  </div>
-                  <div class="content_epic_common2">
-                    <a href="" class="btn btn-danger swing">PLAY!</a>
-              </div>
-            </div>
-            <div class="row">
-                <div class="col content_epic_common">Game<span>{name}</span>; People:<span>{people}</span>;connection:<span>{connection}</span>;
-
-                </div>
-                <div class="content_epic_common2">
-                  <a href="" class="btn btn-danger swing">PLAY!</a>
-            </div>
-          </div>
-          <div class="row">
-              <div class="col content_epic_common">Game<span>{name}</span>; People:<span>{people}</span>;connection:<span>{connection}</span>;
-
-              </div>
-              <div class="content_epic_common2">
-                <a href="" class="btn btn-danger swing">PLAY!</a>
-          </div>
-        </div>
-        <div class="row">
-            <div class="col content_epic_common">Game<span>{name}</span>; People:<span>{people}</span>;connection:<span>{connection}</span>;
-
-            </div>
-            <div class="content_epic_common2">
-              <a href="" class="btn btn-danger swing">PLAY!</a>
-        </div>
-      </div>
-      <div class="row">
-          <div class="col content_epic_common">Game<span>{name}</span>; People:<span>{people}</span>;connection:<span>{connection}</span>;
-
-          </div>
-          <div class="content_epic_common2">
-            <a href="" class="btn btn-danger swing">PLAY!</a>
-      </div>
-    </div>
-    <div class="row">
-        <div class="col content_epic_common">Game<span>{name}</span>; People:<span>{people}</span>;connection:<span>{connection}</span>;
-
-        </div>
-        <div class="content_epic_common2">
-          <a href="" class="btn btn-danger swing">PLAY!</a>
-    </div>
-  </div>
-  <div class="row">
-      <div class="col content_epic_common">Game<span>{name}</span>; People:<span>{people}</span>;connection:<span>{connection}</span>;
-
-      </div>
-      <div class="content_epic_common2">
-        <a href="" class="btn btn-danger swing">PLAY!</a>
-  </div>
-</div>
-<div class="row">
-    <div class="col content_epic_common">Game<span>{name}</span>; People:<span>{people}</span>;connection:<span>{connection}</span>;
-
-    </div>
-    <div class="content_epic_common2">
-      <a href="" class="btn btn-danger swing">PLAY!</a>
-</div>
-</div>
-<div class="row">
-    <div class="col content_epic_common">Game<span>{name}</span>; People:<span>{people}</span>;connection:<span>{connection}</span>;
-
-    </div>
-    <div class="content_epic_common2">
-      <a href="" class="btn btn-danger swing">PLAY!</a>
-</div>
-</div>
-                </div>
-            </div>
-
-        <div id="other4"  style="display:none">
-            <div class="battle_content">
-                <a href="battle.html" class="delete2 btn btn-primary " > -back- </a>
-                    <h1>Lobby</h1>
-                    <div class="row">
-                        <div class="col content_epic_common">Game<span>{name}</span>; People:<span>{people}</span>;connection:<span>{connection}</span>;
-
-                        </div>
-                        <div class="content_epic_common2">
-                          <a href="" class="btn btn-danger swing">PLAY!</a>
-                    </div>
-                  </div>
-                  <div class="row">
-                      <div class="col content_epic_common">Game<span>{name}</span>; People:<span>{people}</span>;connection:<span>{connection}</span>;
-
-                      </div>
-                      <div class="content_epic_common2">
-                        <a href="" class="btn btn-danger swing">PLAY!</a>
-                  </div>
-                </div>
-                <div class="row">
-                    <div class="col content_epic_common">Game<span>{name}</span>; People:<span>{people}</span>;connection:<span>{connection}</span>;
-
-                    </div>
-                    <div class="content_epic_common2">
-                      <a href="" class="btn btn-danger swing">PLAY!</a>
-                </div>
-              </div>
-              <div class="row">
-                  <div class="col content_epic_common">Game<span>{name}</span>; People:<span>{people}</span>;connection:<span>{connection}</span>;
-
-                  </div>
-                  <div class="content_epic_common2">
-                    <a href="" class="btn btn-danger swing">PLAY!</a>
-              </div>
-            </div>
-            <div class="row">
-                <div class="col content_epic_common">Game<span>{name}</span>; People:<span>{people}</span>;connection:<span>{connection}</span>;
-
-                </div>
-                <div class="content_epic_common2">
-                  <a href="" class="btn btn-danger swing">PLAY!</a>
-            </div>
-          </div>
-          <div class="row">
-              <div class="col content_epic_common">Game<span>{name}</span>; People:<span>{people}</span>;connection:<span>{connection}</span>;
-
-              </div>
-              <div class="content_epic_common2">
-                <a href="" class="btn btn-danger swing">PLAY!</a>
-          </div>
-        </div>
-        <div class="row">
-            <div class="col content_epic_common">Game<span>{name}</span>; People:<span>{people}</span>;connection:<span>{connection}</span>;
-
-            </div>
-            <div class="content_epic_common2">
-              <a href="" class="btn btn-danger swing">PLAY!</a>
-        </div>
-      </div>
-      <div class="row">
-          <div class="col content_epic_common">Game<span>{name}</span>; People:<span>{people}</span>;connection:<span>{connection}</span>;
-
-          </div>
-          <div class="content_epic_common2">
-            <a href="" class="btn btn-danger swing">PLAY!</a>
-      </div>
-    </div>
-    <div class="row">
-        <div class="col content_epic_common">Game<span>{name}</span>; People:<span>{people}</span>;connection:<span>{connection}</span>;
-
-        </div>
-        <div class="content_epic_common2">
-          <a href="" class="btn btn-danger swing">PLAY!</a>
-    </div>
-  </div>
-  <div class="row">
-      <div class="col content_epic_common">Game<span>{name}</span>; People:<span>{people}</span>;connection:<span>{connection}</span>;
-
-      </div>
-      <div class="content_epic_common2">
-        <a href="" class="btn btn-danger swing">PLAY!</a>
-  </div>
-</div>
-
-                </div>
-
-                </div>
                 <div id="footer">
             <p>&copy; 2018 powered by Ilya Gayvoronsky for olympiad</p>
         </div>
