deleted js support

--- a/battle.html
+++ b/battle.html
@@ -5,8 +5,6 @@
     <title>StarWars</title>
     <link href="bootstrap/bootstrap.min.css" rel="stylesheet"/>
     <link href="css/main.css" rel="stylesheet"/>
-    <script src="js/jquery-3.2.1.min.js"></script>
-    <script src="js/History.js"></script>
     <script src="bootstrap/bootstrap.min.js"></script>
 </head>
 <body>
@@ -27,10 +25,10 @@
             <h2>History battles</h2>
         </div >
         <div class="news_header">
-            <a  href="common.html" id="slider" class="buttons btn btn-primary " onclick="hideshow();" style="background-color: darkgray;border: solid 1px  darkgrey">common games</a>
-            <a href="epic.html" id="slider2" class="buttons btn btn-primary " onclick="hideshow2();" style="background-color: rebeccapurple;border: solid 1px  rebeccapurple;color:white;">Epic games</a>
-            <a href="group.html" id="slider3" class="buttons btn btn-primary " onclick="hideshow3();" style="background-color: blue;border: solid 1px  rebeccapurple;color:white;">Group games</a>
-            <a href="survial.html" class="buttons btn btn-primary " style="background-color:darkgreen;border: solid 1px  rebeccapurple;color:yellow;">Survial games</a>
+            <a  href="common.html" id="slider" class="buttons btn btn-primary " style="background-color: darkgray;border: solid 1px  black">common games</a>
+            <a href="epic.html" id="slider2" class="buttons btn btn-primary " style="background-color: rebeccapurple;border: solid 1px  yellow;color:yellow;">Epic games</a>
+            <a href="group.html" id="slider3" class="buttons btn btn-primary " style="background-color: blue;border: solid 1px  rebeccapurple;color:white;">Group games</a>
+            <a href="survial.html" class="buttons btn btn-primary " style="background-color:darkgreen;border: solid 2px  yellow;color:yellow;">Survial games</a>
         </div>
                 <div id="footer">
             <p>&copy; 2018 powered by Ilya Gayvoronsky for olympiad</p>
