deleted js support

--- a/rating.html
+++ b/rating.html
@@ -14,7 +14,13 @@
     <div id="header">
         <div><img id="header_banner" src="images/header.png" alt="banner"/></div>
     </div>
-
+   <div class="main">
+            <nav>
+              <a href="index.html">News</a>|
+              <a href="battle.html">Battles</a>|
+              <a href="rating.html">Rating</a>
+            </nav>
+    </div>
     <div id="rating_table_title"><h4>RATING OF PLAYERS</h4></div>
 <table id="rating_table">
     <tr>
