--- a/common.html
+++ b/common.html
@@ -18,7 +18,7 @@
         <div id="common_header">
             <h2>Common battles</h2>
         </div >
-        <div id="other"  style="display:none">
+        <div id="other" >
             <div class="battle_content">
                 <a href="battle.html" class="delete2 btn btn-primary " > -back- </a>
                     <h1>Lobby</h1>
