--- a/epic.html
+++ b/epic.html
@@ -15,7 +15,7 @@
         <div id="epic_header">
             <h2>Epic battles</h2>
         </div >
-        <div id="other2"  style="display:none">
+        <div id="other2">
             <div class="battle_content">
                 <a href="battle.html" class="delete2 btn btn-primary "> -back- </a>
                     <h1>Lobby</h1>
