--- a/group.html
+++ b/group.html
@@ -13,19 +13,12 @@
         <div><img id="header_banner" src="images/header.png" alt="banner"/></div>
     </div>
 
-        <div class="main">
-            <nav>
-              <a href="index.html">News</a>|
-              <a href="battle.html">Battles</a>|
-              <a href="rating.html">Rating</a>
-            </nav>
-    </div>
     <div class="container">
         <div id="group_header">
             <h2>Group battles</h2>
         </div >
 
-        <div id="other3"  style="display:none">
+        <div id="other3">
             <div class="battle_content">
                 <a href="battle.html" class="delete2 btn btn-primary " > -back- </a>
                     <h1>Lobby</h1>
