--- a/survial.html
+++ b/survial.html
@@ -16,7 +16,7 @@
             <h2>Survial</h2>
         </div >
        
-        <div id="other4"  style="display:none">
+        <div id="other4" >
             <div class="battle_content">
                 <a href="battle.html" class="delete2 btn btn-primary " > -back- </a>
                     <h1>Lobby</h1>
