--- a/battle.html
+++ b/battle.html
@@ -22,7 +22,7 @@
     </div>
     <div class="container">
         <div id="news_header">
-            <h2>History battles</h2>
+            <h2>Battles</h2>
         </div >
         <div class="news_header">
             <a  href="common.html" id="slider" class="buttons btn btn-primary " style="background-color: darkgray;border: solid 1px  black">common games</a>
